# ecommerce

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
api/: Dockerfile  main.py
api/src/: __init__.py  endpoints.py  params.py  schemas.py
app/: ABOUT.md  Dockerfile  app.py
app/components/: __init__.py  cart.py  shipping.py
app/sites/: __init__.py  cart.py  docs.py  home.py
app/src/: layout.py  params.py
etc/: .env-copy
tests/: api_test.sh
